Fix button alignment

--- a/design.css
+++ b/design.css
@@ -171,8 +171,8 @@ body img {
 	line-height: 17px;
 	color: #fff;
 	border: 2px solid #fff;
-	top: 0;
-	right: 0;
+	top: 5px;
+	right: 5px;
 	width: 25px;
 	height: 25px;
 }
